test/bad/arrays/comprehension01.px

a = [x for x in 1..'c']
